--- a/jQwidgetSample/jQwidgetSample/jQwidgetSample.csproj
+++ b/jQwidgetSample/jQwidgetSample/jQwidgetSample.csproj
@@ -59,6 +59,50 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Datepicker.html" />
+    <Content Include="DateTimePicker\external\jquery\jquery.js" />
+    <Content Include="DateTimePicker\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
+    <Content Include="DateTimePicker\images\ui-bg_diagonals-thick_20_666666_40x40.png" />
+    <Content Include="DateTimePicker\images\ui-bg_flat_10_000000_40x100.png" />
+    <Content Include="DateTimePicker\images\ui-bg_glass_100_f6f6f6_1x400.png" />
+    <Content Include="DateTimePicker\images\ui-bg_glass_100_fdf5ce_1x400.png" />
+    <Content Include="DateTimePicker\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="DateTimePicker\images\ui-bg_gloss-wave_35_f6a828_500x100.png" />
+    <Content Include="DateTimePicker\images\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="DateTimePicker\images\ui-bg_highlight-soft_75_ffe45c_1x100.png" />
+    <Content Include="DateTimePicker\images\ui-icons_222222_256x240.png" />
+    <Content Include="DateTimePicker\images\ui-icons_228ef1_256x240.png" />
+    <Content Include="DateTimePicker\images\ui-icons_ef8c08_256x240.png" />
+    <Content Include="DateTimePicker\images\ui-icons_ffd27a_256x240.png" />
+    <Content Include="DateTimePicker\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="DateTimePicker\jquery-2.1.4.js" />
+    <Content Include="DateTimePicker\jquery-ui.css" />
+    <Content Include="DateTimePicker\jquery-ui.js" />
+    <Content Include="DateTimePicker\jquery-ui.min.css" />
+    <Content Include="DateTimePicker\jquery-ui.min.js" />
+    <Content Include="DateTimePicker\jquery-ui.structure.css" />
+    <Content Include="DateTimePicker\jquery-ui.structure.min.css" />
+    <Content Include="DateTimePicker\jquery-ui.theme.css" />
+    <Content Include="DateTimePicker\jquery-ui.theme.min.css" />
+    <Content Include="DateTimePicker\jquery.datetimepicker.css" />
+    <Content Include="DateTimePicker\jquery.datetimepicker.js" />
+    <Content Include="DateTimePicker\jquery.js" />
+    <Content Include="DateTimePicker\smoothness\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-icons_222222_256x240.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-icons_454545_256x240.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-icons_888888_256x240.png" />
+    <Content Include="DateTimePicker\smoothness\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="DateTimePicker\smoothness\jquery-ui.css" />
+    <Content Include="DateTimePicker\smoothness\jquery-ui.min.css" />
+    <Content Include="DateTimePicker\smoothness\theme.css" />
     <Content Include="imgwidget.html" />
     <Content Include="jQgrid.html" />
     <Content Include="jQgridScript1.js" />
