--- a/jQwidgetSample/jQwidgetSample/jQwidgetSample.csproj
+++ b/jQwidgetSample/jQwidgetSample/jQwidgetSample.csproj
@@ -59,6 +59,28 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AnotherDate.html" />
+    <Content Include="BoostrapDate.html" />
+    <Content Include="bootsrapdate\bootstrap-combined.min.css" />
+    <Content Include="bootsrapdate\bootstrap-datetimepicker.css" />
+    <Content Include="bootsrapdate\bootstrap-datetimepicker.min.css" />
+    <Content Include="bootsrapdate\bootstrap-datetimepicker.min.js" />
+    <Content Include="bootsrapdate\bootstrap-datetimepicker.pt-BR.js" />
+    <Content Include="bootsrapdate\css\bootstrap-datetimepicker.min.css" />
+    <Content Include="bootsrapdate\jquery.min.js" />
+    <Content Include="bootsrapdate\js\bootstrap-datetimepicker.min.js" />
+    <Content Include="bootsrapdate\js\jquery-1.9.1.min.js" />
+    <Content Include="bootsrapdate\js\jssor.slider.mini.js" />
+    <Content Include="bootsrapdate\moment.js" />
+    <Content Include="bootstrap-3.3.4-dist\css\bootstrap-theme.css" />
+    <Content Include="bootstrap-3.3.4-dist\css\bootstrap-theme.min.css" />
+    <Content Include="bootstrap-3.3.4-dist\css\bootstrap.css" />
+    <Content Include="bootstrap-3.3.4-dist\css\bootstrap.min.css" />
+    <Content Include="bootstrap-3.3.4-dist\css\carousel.css" />
+    <Content Include="bootstrap-3.3.4-dist\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="bootstrap-3.3.4-dist\js\bootstrap.js" />
+    <Content Include="bootstrap-3.3.4-dist\js\bootstrap.min.js" />
+    <Content Include="bootstrap-3.3.4-dist\js\npm.js" />
     <Content Include="Datepicker.html" />
     <Content Include="DateTimePicker\external\jquery\jquery.js" />
     <Content Include="DateTimePicker\images\ui-bg_diagonals-thick_18_b81900_40x40.png" />
@@ -537,6 +559,12 @@
     <Content Include="scripts\jquery-1.10.2.min.map" />
     <Content Include="scripts\jquery-1.11.1.min.map" />
     <Content Include="scripts\jquery.mobile-1.4.3.min.map" />
+    <Content Include="bootstrap-3.3.4-dist\css\bootstrap-theme.css.map" />
+    <Content Include="bootstrap-3.3.4-dist\css\bootstrap.css.map" />
+    <Content Include="bootstrap-3.3.4-dist\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="bootstrap-3.3.4-dist\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="bootstrap-3.3.4-dist\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="bootstrap-3.3.4-dist\fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
