--- a/jQwidgetSample/jQwidgetSample/jQwidgetSample.csproj
+++ b/jQwidgetSample/jQwidgetSample/jQwidgetSample.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Jqxchartz.html" />
     <Content Include="pages\ajax1.html" />
     <Content Include="pages\ajax2.html" />
     <Content Include="Ajaxloading.html" />
